--- a/config.toml
+++ b/config.toml
@@ -107,7 +107,7 @@ googleAnalytics = ""
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "lybie.hund@gmx.net"
+  formspree_id = "mgeqgpao"
 
 
 
